--- a/assets/style.css
+++ b/assets/style.css
@@ -56,7 +56,7 @@ menu {
 form {
  position:relative;
 display:inline;
-padding: 10px;
+/*padding: 10px;*/
 
 width: 740px;
 height: 498px;
@@ -84,8 +84,8 @@ button {
 footer {
    position:relative; 
    bottom: 0px;
-   padding: 20px;
+   /*padding: 20px;*/
    
-   background-color: rgb(105, 35, 62);
+   background-color: rgb(42, 35, 105);
    color:aliceblue;
 }
